css/style.css
header {
    background-color: #4ea0ff;
    background-image: url("../img/pattern.png");
    background-repeat: repeat-x;
    background-size: contain;
}

.logo {
    margin-top: 50px;
    width: 20%;
}

.highlighted {
    background-color: #ff0;
}

.table_head {
    color: white;
    background-color: #20a9e5;
}

.table_odd_rows {
    background-color: #b1e5f2;
}

